<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">艺术区管理</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="title_activity_begin_to_hecha" translatable="false">BeginToHecha</string>
    <string name="title_activity_map_hua_lang_location" translatable="false">MapHuaLangLocation</string>

    <string-array name="styles_array">
        <item>有限责任</item>
        <item>股份有限</item>
        <item>私营企业</item>
    </string-array>
    <string-array name="state_array">
        <item>歇业中</item>
        <item>运营中</item>
    </string-array>


    <string name="finish" translatable="false">完成</string>
    <string name="home_title" translatable="false">朝阳区艺术区监督管理系统</string>
    <string name="home" translatable="false">首页</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="album" translatable="false">相册</string>
    <string name="camera_cancel" translatable="false">取消</string>
    <string name="no_photo" translatable="false">相册没有图片</string>
    <string name="only_choose_num" translatable="false">超出可选图片张数</string>
    <string name="fail" translatable="false">请求失败！</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="title_activity_persion_info" translatable="false">PersionInfoActivity</string>
    <string name="title_activity_hua_lang_serch" translatable="false">HuaLangSerchActivity</string>
    <string name="title_activity_alter_hualang" translatable="false">AlterHualangActivity</string>
    <string name="title_activity_check_hualang" translatable="false">CheckHualangActivity</string>
    <string name="title_activity_hualang_history" translatable="false">HualangHistoryActivity</string>
    <string name="title_activity_history_info" translatable="false">HistoryInfoActivity</string>
    <string name="title_activity_sp" translatable="false">SpActivity</string>
    <string name="title_activity_dialog" translatable="false">MainActivity</string>
    <string name="title_activity_showing_info" translatable="false">ShowingInfoActivity</string>

    <string name="updated">检查更新     %s</string>
    <string name="The_video_to_start">录像开始</string>
    <string name="Whether_to_send">是否发送？</string>
    <string name="Open_the_equipment_failure">打开设备失败!</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="record_video">录制视频</string>
    <string name="finish_num">已完成（%d/3）</string>
    <string name="img">图片</string>
    <string name="video">视频</string>
    <string name="no_log_in">未登录</string>
    <string name="worksCount">作品数量((数字)选填项)</string>
    <string name="videoCount">视频数量((数字)选填项)</string>
    <string name="sculptureCount">雕塑数量((数字)选填项)</string>
    <string name="deviceCount">装置数量((数字)选填项)</string>
    <string name="otherDesc">其他(选填项)</string>
    <string name="worksCount1">作品数量：</string>
    <string name="videoCount1">视频数量：</string>
    <string name="sculptureCount1">雕塑数量：</string>
    <string name="deviceCount1">装置数量：</string>
    <string name="otherDesc1">其他：</string>

    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="description_info">Info</string>
    <string name="permission_request">This needs permission for camera and audio recording.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="search">搜索</string>
    <string name="no_more_data">没有更多数据</string>
    <string name="No_data">暂无数据！</string>
    <string name="exhibition_start">展览开始：</string>
    <string name="exhibition_end">展览结束：</string>
</resources>